--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,10 @@
     <app-login></app-login>
     
     <footer style="background-color: rgb(26, 131, 218);" class=" text-white "></footer>
-<!-- <p>copy right@sbi banking 2023</p> -->
-</body>
-</html>
-
+ <p>copy right@sbi banking 2023</p>
+ </body>
+</html>-->
+<!-- <app-login></app-login> -->
+ 
+<router-outlet></router-outlet>
+ 
