--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,35 +1,35 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<!-- <h3>{{data}}</h3>
-<div class="row w-100">
-    <div class="col-6 main ms-5 border border-5 text-center text-white p-2">
-        <h1 class="text-center">Login Form</h1>
-    </div>
-</div>
-<div class="p-2 mt-2">
-   
-<input type="text" id="u1" placeholder="enter account number" 
- class="form-control mt-2 p-2">
-</div>
-
-<input #p1 type="password" id="p1" placeholder="Enter password">
-<button onclick="login()" type="button">Login</button>
-<button (click)="login(p1)" type="button">login </button> -->
-
-
-<!-- <div style="background-image:url('/assets/images/b1.jpg'); background-repeat: no-repeat; background-position: center; "> -->
-    <!-- <img src="/assets/images/bankimg.jpg" alt=""> -->
-
-<!-- <h2>Login Form</h2> -->
-<div class="row w-100 " style="background-image:url('/assets/images/b1.jpg'); background-repeat: no-repeat; background-position:25% top; background-size: contain; ">
+<!-- <div class="row w-100 " style="background-image:url('/assets/images/b1.jpg'); background-repeat: no-repeat; background-position:25% top; background-size: contain; ">
 <div class="col-6 main ms-5 border border-5 text-center text-white p-0 ">
     <h1 class="text-center">Login Form</h1>
 
-    <!-- <label  for="a1">Account Number</label> <br> -->
     <input  type="text" id="a1" placeholder="Account Number" class="mt-2 w-75"><br><br>
-    <!-- <label  for="p1">Password</label><br> -->
     <input  type="password" id="p1" placeholder="Password" class="mt-2 w-75"> <br> <br>
     <button (click)="login()"  class="btn btn-success" type="button">Login</button>  <br>
     <a routerLink="register" class="text-black"><strong>  Create New Account </strong></a>
 </div>
-</div>
+</div> -->
 <!-- </div> -->
+
+<!-- ----------- -->
+    <div class="container">
+        <div class="login">
+            <div class="content">
+                <img src="/assets/images/bankimg.jpg" alt="">
+            </div>
+            <div class="loginform">
+                <h1>Login</h1>
+                <form>
+                    <div class="tbox">
+                        <i class="fa fa-user"></i><input [(ngModel)]="acno" type="text" id="a1" name="acno" placeholder="Account Number">
+                    </div>
+                    <div class="tbox">
+                        <i class="fa fa-lock"></i><input [(ngModel)]="psw" type="password" id="p1" name="psw" placeholder="Password">
+                    </div>
+                    <button (click)="login()"  class="btn" type="button">Login</button>
+                </form>
+                <a routerLink="register" class="text-black"><strong>  Create New Account </strong></a>
+
+            </div>
+        </div>
+    </div>
+
