--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,13 @@
-<div class="main w-50 container text-center border border-5 mt-5 p-2">
+<div class="register">
+    <div class="content">
+        <img src="/assets/images/bankimg.jpg" alt="">
+    </div>
+    <div class="registerform">
 <h1 class="text-center">create new account</h1>
-<input [(ngModel)]="n1" type="text" id="b1" name="n1" placeholder="Account Number" class="mt-2 w-75 "><br><br>
-<input [(ngModel)]="n2" type="text" id="b2" name="n2" placeholder="User Name" class="mt-2 w-75"><br><br>
-<input [(ngModel)]="n3" type="password" id="b3" name="n3"  placeholder="password" class="mt-2 w-75"><br><br>
-<input [(ngModel)]="n4" type="password" id="b4" name="n4"  placeholder="confirm ;password" class="mt-2 w-75"><br><br>
-<button (click)="signup()" type="submit" class="btn btn-success">Crerate</button><br>
+<input [(ngModel)]="acno" type="text" id="b1" name="n1" placeholder="Account Number" class="mt-2 w-75 "><br><br>
+<input [(ngModel)]="uname" type="text" id="b2" name="n2" placeholder="User Name" class="mt-2 w-75"><br><br>
+<input [(ngModel)]="psw" type="password" id="b3" name="n3"  placeholder="password" class="mt-2 w-75"><br><br>
+<input [(ngModel)]="cpsw" type="password" id="b4" name="n4"  placeholder="confirm password" class="mt-2 w-75"><br><br>
+<button (click)="signup()" type="button" class="btn btn-success">Crerate</button><br>
+</div>
 </div>
